feat: add authenticator

--- a/.env
+++ b/.env
@@ -20,5 +20,9 @@ APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://maildev_docker_symfony:1025
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
