--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    mailer_api_header: '%env(APP_API_HEADER)%'
+    mailer_api_key: '%env(APP_API_KEY)%'
 
 services:
     # default configuration for services in *this* file
@@ -24,6 +26,10 @@ services:
             $noReplyEmail: '%env(MAILER_NO_REPLY_EMAIL)%'
             $replyEmail: '%env(MAILER_REPLY_NAME)%'
             $fromName: '%env(MAILER_FROM_NAME)%'
+    App\Security\ApiAuthenticator:
+        arguments:
+            $apiHeaderName: '%mailer_api_header%'
+            $apiKey: '%mailer_api_key%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
