--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://maildev_docker_symfony:1025
+MAILER_DSN=smtp://symfony-mail:1025
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
