--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ MAILER_DSN=smtp://symfony-mail:1025
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN=http://localhost:5173
 ###< nelmio/cors-bundle ###
